<resources>
    <string name="app_name">Objetivo Bolso</string>
    <string name="saved_total">Total Guardado</string>
    <string name="last_saved_value">Último valor guardado: R$ 50,00</string>
    <string name="date_last_saved">Data: 07/06/2024</string>
    <string name="add_new_goal">Adicionar novo objetivo</string>
    <string name="choose_goal">Escolha o seu objetivo:</string>
    <string name="car">Carro</string>
    <string name="marriage">Casamento</string>
    <string name="travel">Viagem</string>
    <string name="just_save">Só poupar</string>
    <string name="house">Casa</string>
    <string name="other_goal">Outro objetivo</string>
    <string name="how_much_do_you_want_to_save">Quanto você quer juntar?</string>
    <string name="how_much_do_you_already_have">Quanto você já tem? (Opcional)</string>
    <string name="create_goal">Criar objetivo</string>
    <string name="enter_an_amount_greater_than_or_equal_to_one">"Digite um valor maior ou igual a R$ 1,00"</string>
    <string name="what_is_your_goal">Qual o seu objetivo?</string>
    <string name="choose_image">Escolha uma imagem:</string>
    <string name="save">Salvar</string>
    <string name="enter_a_name_for_your_goal">Digite um titulo para o seu objetivo</string>
    <string name="goal_is_created">Seu objetivo foi criado</string>
    <string name="msg_motivation">Agora, você deve guardar sempre o seu dinheiro. Continue firme, seu futuro financeiro agradece.</string>
    <string name="back_to_main">Ir para o inicio</string>
    <string name="no_objective_created">Nenhum objetivo criado!</string>
    <string name="remove_goal">Remover objetivo</string>
    <string name="this_goal_will_be_permanently_removed_from_your_device">Este objetivo será removido permanentimente do seu dispositivo</string>
    <string name="remove">Remover</string>
    <string name="cancel">Cancelar</string>
    <string name="edit">Editar</string>
    <string name="of">De %1$s</string>
    <string name="number_of_caracter_goal_title">%1$s/20</string>
    <string name="whats_is_objetivo_bolso">O que é o Objetivo Bolso?</string>
    <string name="objetivo_bolso_description">É uma maneira de você se organizar financeiramento para alcançar os seus sonhos. Você organiza a quantidade de dinheiro que você precisa para cada objetivo.</string>
    <string name="how_create_goals">Como criar objetivos ?</string>
    <string name="step_by_step">Para criar, é śo seguir o passo a passo:</string>
    <string name="step_1">1. Clique no botão <b>Adicionar novo objetivo</b>;</string>
    <string name="step_2">2. Escolha um objetivo ou crie um objetivo personalizado;</string>
    <string name="step_3">3. Defina o valor do seu objetivo;</string>
    <string name="step_4">4. Clique no botão <b>Criar objetivo</b>;</string>
</resources>