<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HelpActivity">


    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"
        />

    <TextView
        android:id="@+id/text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whats_is_objetivo_bolso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/text_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:justificationMode="inter_word"
        android:text="@string/objetivo_bolso_description">

    </TextView>
    <TextView
        android:id="@+id/text_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_create_goals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_2"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/text_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_3"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:text="@string/step_by_step"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/text_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_4"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:text="@string/step_1"
        android:textSize="17sp" />
    <TextView
        android:id="@+id/text_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_5"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:text="@string/step_2"
        android:textSize="17sp" />
    <TextView
        android:id="@+id/text_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_6"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:text="@string/step_3"
        android:textSize="17sp" />
    <TextView
        android:id="@+id/text_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_7"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:text="@string/step_4"
        android:textSize="17sp" />

</androidx.constraintlayout.widget.ConstraintLayout>