<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_custom_goal_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Very_light_gray"
    tools:context=".activity.CreateGoalActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <FrameLayout
        android:id="@+id/container_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:id="@+id/goal_img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:background="@color/light_silver"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/pig_bank"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <ImageButton
            android:id="@+id/btn_add_image"
            android:alpha="0.8"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/photo_icon"
            android:padding="5dp">

        </ImageButton>

    </FrameLayout>


    <LinearLayout
        android:id="@+id/container_form_create_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/container_image">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/what_is_your_goal"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>


        <EditText
            android:id="@+id/goal_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_edit_text_form"
            android:inputType="text"
            android:padding="12dp"
            android:maxLength="20"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="right"
            >

            <include
                android:id="@+id/text_view_error_goal_title"
                layout="@layout/text_view_error" />
            <TextView
                android:id="@+id/text_view_count_character"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:text="0/20">
            </TextView>
        </LinearLayout>


        <TextView
            android:id="@+id/label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/how_much_do_you_want_to_save"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:id="@+id/want_to_save_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_edit_text_form"
            android:inputType="number"
            android:padding="12dp"
            android:text="R$ 0,00"
            android:textSize="15sp" />

        <include
            android:id="@+id/text_view_error_1"
            layout="@layout/text_view_error" />

        <TextView
            android:id="@+id/label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/how_much_do_you_already_have"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/already_have_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_edit_text_form"
            android:inputType="number"
            android:padding="12dp"
            android:text="R$ 0,00"
            android:textSize="15sp">

        </EditText>

        <include
            android:id="@+id/text_view_error_2"
            layout="@layout/text_view_error" />


    </LinearLayout>


    <include
        layout="@layout/button" />


</androidx.constraintlayout.widget.ConstraintLayout>